[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multithread"
version = "0.0.1"
description = "Multithread: adaptive thread pool with dynamic scaling for Python 3.14 free-threading (no-GIL)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [
    { name = "TheMapleseed" }
]
keywords = ["threading", "parallelism", "concurrency", "free-threading", "no-gil", "thread-pool", "multithread"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Threading",
]
[project.urls]
Homepage = "https://github.com/TheMapleseed/Multithread"
Documentation = "https://github.com/TheMapleseed/Multithread#readme"
Repository = "https://github.com/TheMapleseed/Multithread"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
multithread = "multithread._cli:main"
